# libMfxFaust

./: .gitignore  CMakeLists.txt  DspFaust.cpp  DspFaust.h  Extra.c  Readme.md  dummy-audio.h  jack-dsp.h  linker_script.txt  mfx-ring-buffer.h  msvc-wine.cmake
.github/workflows/: build.yml
test/: test_1.c  test_create_dsp_ringbuffer.lua  test_create_dsp_ui.dsp  test_create_dsp_ui.lua  test_create_dsp_ui_nostdfaust.dsp  test_jack_driver.dsp  test_open_dsp_file.lua
